# dragonflybot

./: Cargo.toml  Dockerfile  README.md  build.rs
proto/: orderbook.proto
src/: constants.rs  error.rs  feed.rs  lib.rs  listener_aggregator.rs  types.rs  util.rs
src/feed/: client.rs  listener.rs  subscriber.rs
src/feed/client/: tls.rs  ws.rs
src/feed/listener/: orderbook_snap_change_forwarder.rs
src/feed/listener/orderbook_snap_change_forwarder/: binance.rs  bitstamp.rs
src/feed/listener_aggregator/: top_bbo.rs
src/feed/subscriber/: ws.rs
src/feed/subscriber/ws/: binance.rs  bitstamp.rs
src/listener_aggregator/: top_bbo.rs
src/service/: grpc.rs
src/service/grpc/: orderbook_aggregator.rs
